fix: popup content gets cropped out
When height 9s about 670px popup content gets
cropped out a little from the top and bottom. Reducing
max height from 95vh to 90vh will solve this issue

--- a/project/src/assets/css/popup.css
+++ b/project/src/assets/css/popup.css
@@ -120,3 +120,12 @@
     width: 85%;
   }
 }
+
+/** When height is about 670px popup content gets
+cropped out a little from the top and bottom. Reducing
+max height will solve this issue */
+@media (max-height: 700px) {
+  .popup-content {
+    max-height: 80vh;
+  }
+}
